fix(TagGroup): correct spacing between tags

--- a/packages/components/src/components/TagGroup/TagGroup.module.css
+++ b/packages/components/src/components/TagGroup/TagGroup.module.css
@@ -1,6 +1,6 @@
 .base {
   flex-wrap: wrap;
-  gap: var(--kbq-size-s);
+  gap: var(--kbq-size-xxs);
   display: flex;
 }
 
